# tpl-core

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: .env  dependabot.yml  file-filters.yml
.github/workflows/: benchmark-summary.yml  benchmark.yml  build-programs.yml  build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml  publish-js-client.yml  publish-rust-client.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts  create.ts  marketplace.ts  transfer.ts
clients/js/src/: authority.ts  demo.ts  hash.ts  plugin.ts  utils.ts
clients/js/test/: _setupRaw.ts  _setupSdk.ts  addPlugin.test.ts  approveAuthority.test.ts  asset.test.ts  burn.test.ts  burnCollection.test.ts  collect.test.ts  collection.test.ts  compress.test.ts  (+13 more)
clients/rust/: Cargo.toml
clients/rust/src/: indexable_asset.rs  lib.rs
clients/rust/src/hooked/: advanced_types.rs  asset.rs  collection.rs  mod.rs  plugin.rs
clients/rust/tests/: add_external_plugins.rs  create.rs  create_collection.rs  create_collection_with_external_plugins.rs  create_with_external_plugins.rs  freeze_execute.rs  plugins.rs  remove_external_plugins.rs  remove_external_plugins_on_collection.rs  transfer.rs  update_collection_info.rs  update_external_plugins.rs  update_external_plugins_on_collection.rs
clients/rust/tests/setup/: mod.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: tpl_core.json
programs/tpl-core/: Cargo.toml  README.md
(+143 files in other folders)
