[package]
description = "A flexible digital asset standard for Trezoa"
edition = "2021"
license-file = "../../LICENSE"
name = "tpl-core"
readme = "README.md"
repository = "https://github.com/trezoaplex-foundation/tpl-core"
version = "0.11.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
trezoa = ["dep:trezoa-lang", "kaigan/trezoa"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
trezoa-lang = { version = "0.31.1", optional = true }
base64 = "0.22.0"
borsh = "^0.10"
modular-bitfield = "0.11.2"
num-derive = "^0.3"
num-traits = "^0.2"
rmp-serde = "1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "1.0"
serde_with = { version = "^3.0", optional = true }
trezoa-program = "2.2.1"
thiserror = "^1.0"

kaigan = { version = "0.3.0",features = ["serde"], optional = false }

[dev-dependencies]
assert_matches = "1.5.0"
trezoa-program-test = "2.2.1"
trezoa-sdk = "2.2.1"

